style: align method chains and lambda expressions for readability
- Enable multiline chained method alignment in .editorconfig
- Adjust indentation of chained calls and lambda bodies in multiple Java classes
- Improve consistency in formatting of response building and stream operations